--- a/examples/esp32c3_and_android/android_tauri/index.html
+++ b/examples/esp32c3_and_android/android_tauri/index.html
@@ -1,10 +1,12 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html class="dark bg-background text-on_background">
   <head>
     <meta charset="utf-8" />
     <title>Tauri + Leptos App</title>
-    <link data-trunk rel="css" href="styles.css" />
     <link data-trunk rel="copy-dir" href="public" />
     <link data-trunk rel="rust" data-wasm-opt="z" />
+
+    <!-- Подключаем стили, которые компилирует Tailwind -->
+    <link data-trunk rel="tailwind-css" href="input.css" />
   </head>
 </html>
