--- a/examples/esp32c3_and_android/android_tauri/index.html
+++ b/examples/esp32c3_and_android/android_tauri/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="dark bg-background text-on_background">
+<html class="dark bg-background text-onSurface">
   <head>
     <meta charset="utf-8" />
     <title>Tauri + Leptos App</title>
