add styles to examples

--- a/examples/esp32c3_and_android/android_tauri/index.html
+++ b/examples/esp32c3_and_android/android_tauri/index.html
@@ -2,6 +2,7 @@
 <html class="dark bg-background text-onSurface">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tauri + Leptos App</title>
     <link data-trunk rel="copy-dir" href="public" />
     <link data-trunk rel="rust" data-wasm-opt="z" />
