--- a/examples/material_components/index.html
+++ b/examples/material_components/index.html
@@ -1,11 +1,16 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Tauri + Leptos App</title>
-    <link data-trunk rel="css" href="styles.css" />
-    <link data-trunk rel="copy-dir" href="public" />
-    <link data-trunk rel="rust" data-wasm-opt="z" />
-  </head>
-  <body></body>
+    <head>
+        <meta charset="utf-8" />
+        <title>Material Components</title>
+        <link data-trunk rel="copy-dir" href="public" />
+        <link data-trunk rel="rust" data-wasm-opt="z" />
+
+        <!-- Подключаем стили Tailwind -->
+        <link data-trunk rel="tailwind-css" href="input.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    </head>
+    <body id="body" class="bg-background text-on-background dark"></body>
 </html>
+
+<!-- bg-background text-on-background dark -->
